--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "utils": "^0.3.1"
